# Auralux

./: .env.example  .gitignore  Cargo.toml  NOTICE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/gui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/gui/src/: App.svelte
apps/gui/src/lib/: CapabilityList.svelte  api.ts  format.ts
apps/gui/src/styles/: app.css
apps/tauri/: README.md  package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
crates/auralux-cli/: Cargo.toml
crates/auralux-cli/src/: main.rs
crates/auralux-core/: Cargo.toml
crates/auralux-core/src/: capabilities.rs  conversion.rs  db.rs  events.rs  lib.rs  metadata.rs  playback.rs  scanner.rs  settings.rs  types.rs
crates/auralux-core/tests/: conversion.rs
crates/auraluxd/: Cargo.toml
crates/auraluxd/src/: lib.rs  main.rs
docs/: android.md  architecture.md  commands.md  remote-web.md
scripts/: build-android-apk.sh  build-windows-desktop.sh  windows-register-file-associations.ps1
workers/web-relay/: package.json  tsconfig.json  wrangler.toml
workers/web-relay/src/: index.ts
workers/web-relay/test/: relay.test.ts
