[workspace]
members = [
  "crates/auralux-core",
  "crates/auraluxd",
  "crates/auralux-cli",
  "apps/tauri/src-tauri",
]
resolver = "2"

[workspace.package]
authors = ["Auralux Contributors"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/AKINGX27/Auralux"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.7.9", features = ["macros", "ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
directories = "6.0.0"
futures-util = "0.3.31"
lofty = "0.21.1"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
which = "7.0.3"
