[package]
name = "auralux-core"
version = "0.1.0"
description = "Core library, playback, scanning, and conversion primitives for Auralux."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
lofty.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
