[package]
name = "auraluxd"
version = "0.1.0"
description = "Local Auralux daemon exposing REST, WebSocket, and static GUI routes."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "auraluxd"
path = "src/lib.rs"

[[bin]]
name = "auraluxd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
auralux-core = { path = "../auralux-core" }
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
