[package]
name = "auralux-tauri"
version = "0.1.0"
description = "Auralux desktop and Android shell."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "auralux_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "auralux-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.7"
serde.workspace = true
serde_json.workspace = true

